sonarqube work and resource search filter query change